# navu

./: Cargo.toml
src/: app.rs  commands.rs  error.rs  event.rs  main.rs  search.rs  table.rs
src/fuzzy/: mod.rs  soundex.rs
src/search/: mod.rs
src/ui/: mod.rs  search.rs  state.rs  table.rs  template.rs
