[package]
name = "navu"
version = "0.1.0"
authors = ["Ismael Marin <ismitae.imm@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
thiserror = "2.0.11"
tokio = { version = "1.40.0", features = ["full"] }
tui-textarea = { version = "0.7.0", features = ["search"] }
